k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: securenet
  name: securenet-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: securenet
    version: blue
  type: LoadBalancer
