k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  name: securenet-ingress
spec:
  rules:
  - host: securenet.com
    http:
      paths:
      - backend:
          service:
            name: securenet-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - securenet.com
    secretName: securenet-tls
